--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -52,7 +52,8 @@ body {
 .users-post,
 .comments-cont,
 .post-container {
-  border: 2px solid gray;
+  border: 2px solid rgba(245, 245, 245, 0.529);
+  box-shadow: rgba(0, 0, 0, 0.16) 0 1px 4px;
   width: 100%;
   padding: 1rem;
   margin-top: 5px;
