--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -20,7 +20,7 @@
    <% else %>
    <% @user.recent_posts.each do |post| %>
      <div class="users-post">
-       <h2><%= post.title %></h2>
+       <h2><%= link_to "#{post.title}", user_post_path(@user.id, post.id), class: "link-button" %></h2>
        <p><%= post.text %></p>
        <h4>Comments: <%=post.comments_counter %>, Likes: <%= post.likes_counter %></h4>
      </div>
