--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,4 +1,12 @@
 <div class="main-container">
+<div class="sign-main">
+  <%= button_to "Sign out", destroy_user_session_path, method: :delete, class: "devise-button" %>
+  <% unless user_signed_in? %>
+  <button class="devise-button">
+    <%= link_to "Log in", new_user_session_path, class: "link-login"%>
+  </button>
+  <% end %>
+</div>
 <% @users.each do |user| %>
   <div class="users-wrapper">
     <div class="img-cont">
