--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -15,6 +15,9 @@
        <h2><%= link_to "Post title: #{post.title}", user_post_path(@user.id, post.id), class: "link-button" %></h2>
        <p><%= post.text %></p>
        <h4>Comments: <%=post.comments_counter %>, Likes: <%= post.likes_counter %></h4>
+       <% if can? :destroy, post %>
+        <%=button_to "Delete Post", user_post_path(@user, post), method: :delete, class: "delete-button" %>
+       <% end %>
    </div>
    <div class="comments-cont">
      <% if post.recent_comments.count.zero? %>
