Fix broken image link

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -13,7 +13,7 @@
 <% @users.each do |user| %>
   <div class="users-wrapper">
     <div class="img-cont">
-      <%= image_tag user.photo, :size => "70x85", alt: "user photo" %>
+      <%= image_tag(user.photo.present? ? user.photo : "default_user_photo.png", size: "70x85", alt: "user photo") %>
     </div>
     <div class="user-details">
       <h1><%= link_to user.name, user, class: "link-button"  %></h1>
