--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,7 @@
 <div class="main-container">
  <div class="users-wrapper">
     <div class="img-cont">
-      <%= image_tag @user.photo, :size => "70x80", alt: "user photo" %>
+      <%= image_tag(@user.photo.present? ? @user.photo : "default_user_photo.png", size: "70x80", alt: "user photo") %>
     </div>
     <div class="user-details">
       <h1><%= @user.name %></h1>
